# ProteusTCP

./: CMakeLists.txt
ProteusClient/: CMakeLists.txt  ProteusClient.cpp  stdafx.cpp
ProteusServer/: ProteusServer.cpp  Utils.cpp  Utils.h  WinSockBase.cpp  WinSockBase.h  WinSockClasses.cpp  WinSockClasses.h  stdafx.cpp
UnitTest/: CMakeLists.txt  test.cpp
